example/demo/04-ingress-grpc-serve.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/grpc-backend: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #nginx.ingress.kubernetes.io/secure-backends: "true"
  name: grpc
  namespace: demo 
spec:
  tls:
    - hosts:
      - grpc.demo
      secretName: grpc-secret
  rules:
  - host: grpc.demo
    http:
      paths:
      - backend:
          serviceName: grpc
          servicePort: 3264
        path: /
